--- a/app/views/admin/bantuan/formulir.html
+++ b/app/views/admin/bantuan/formulir.html
@@ -55,7 +55,7 @@
                                                     <label class="form-control-label" for="input-nama-program">Judul
                                                         Bantuan</label>
                                                     <input spellcheck="false" type="text" id="input-nama-program"
-                                                        class="form-control" placeholder="Nama Bantuan" name="nama"
+                                                        class="form-control" placeholder="Nama Campaign" name="nama"
                                                         maxlength="50" data-required="true">
                                                 </div>
                                             </div>
@@ -64,7 +64,7 @@
                                                     <label class="form-control-label"
                                                         for="input-penerima-program">Penerima Bantuan</label>
                                                     <input spellcheck="false" type="text" id="input-penerima-program"
-                                                        class="form-control" placeholder="Nama Penerima"
+                                                        class="form-control" placeholder="Nama orang / Kelompok / Entitas"
                                                         name="nama_penerima" maxlength="50">
                                                 </div>
                                             </div>
@@ -100,7 +100,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="col-12">
+                                    <div class="col-12 buttons">
                                         <button type="reset" class="btn btn-link text-danger m-0">Hapus</button>
                                         <button type="button" class="btn btn-outline-primary next"
                                             data-target="v-pills-tahap-2-tab">Selanjutnya</button>
@@ -125,7 +125,7 @@
                                                         id="charLeft">0/255</small>
                                                 </div>
                                                 <textarea spellcheck="false" minlength="50" maxlength="255"
-                                                    data-required="true" class="form-control textarea"
+                                                    data-required="true" class="form-control textarea w-100"
                                                     aria-label="With textarea" name="deskripsi"
                                                     placeholder="Ketik disini..."></textarea>
                                             </div>
@@ -196,7 +196,7 @@
                                                 placeholder="Tanpa RAB" name="total_rab">
                                         </div>
                                     </div>
-                                    <div class="col-12 d-flex justify-content-start">
+                                    <div class="col-12 d-flex justify-content-start buttons">
                                         <button type="button" class="btn btn-link text-warning m-0"
                                             data-target="v-pills-tahap-2-tab">Kembali Ke Tahap 2</button>
                                         <button type="button" class="btn btn-outline-primary next"
