memperbaiki display span pada default.css menjadi inline pada quil

--- a/public/assets/route/default/core/css/default.css
+++ b/public/assets/route/default/core/css/default.css
@@ -21,6 +21,10 @@
     opacity: 0.9;
 }
 
+.ql-editor span {
+    display: inline !important;
+}
+
 /* Toast */
 div[aria-live="polite"] {
     z-index: 1050;
