menambahkan notif donasi telah diterima untuk donatur yang punya email

--- a/app/views/default/bantuan/detil.html
+++ b/app/views/default/bantuan/detil.html
@@ -285,8 +285,8 @@
                 </div>
             </div>
             <div class="modal-body justify-content-between d-flex">
-                <button class="btn btn-light border fw-bold" data-bs-dismiss="modal">Nanti Aja</button>
-                <a href="<?= '/donasi/buat/baru/'. $data['detil_bantuan']->id_bantuan; ?>" class="btn donasi fw-bold">Donasi Sekarang</a>
+                <button class="btn btn-light border" data-bs-dismiss="modal">Nanti Aja</button>
+                <a href="<?= '/donasi/buat/baru/'. $data['detil_bantuan']->id_bantuan; ?>" class="btn donasi fw-bold">Ya saya donasi</a>
             </div>
         </div>
     </div>
